--- a/jbl_chat/chat/templates/chat/base.html
+++ b/jbl_chat/chat/templates/chat/base.html
@@ -5,29 +5,13 @@
   <meta charset="UTF-8">
   <title>JBL Chat</title>
   <link href="{% static 'chat/css/common.css' %}" media="all" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   {% block extrastyle %}{% endblock %}
 </head>
 <body>
-<aside>
-<nav>
-  <ul>
-    <li class="title">JBL Chat</li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">API</a></li>
-  </ul>
-</nav>
-<nav>
-  <ul>
-    <li class="title">Chats</li>
-    <li><a href="#">Anna</a></li>
-    <li><a href="#">Bob</a></li>
-    <li><a href="#">Charlie</a></li>
-  </ul>
-</nav>
-</aside>
+{% include 'chat/sidebar.html' %}
 <main class="content">
-  {% block content %}{% endblock %}
+{% block content %}{% endblock %}
 </main>
 </body>
 </html>
