Refactor chat templates with HTMX integration

--- a/jbl_chat/chat/templates/chat/base.html
+++ b/jbl_chat/chat/templates/chat/base.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>JBL Chat</title>
   <link href="{% static 'chat/css/common.css' %}" media="all" rel="stylesheet">
+  <script src="{% static 'chat/js/htmx.min.js' %}" defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   {% block extrastyle %}{% endblock %}
 </head>
