--- a/jbl_chat/chat/templates/chat/chat.html
+++ b/jbl_chat/chat/templates/chat/chat.html
@@ -7,35 +7,6 @@
 {% endblock %}
 
 {% block content %}
-
-{% for message in messages %}
-<article class="message {% if message.unread %}unread{% endif %}">
-  <div class="message-header">
-    <a class="author" href="#">{{message.sender.full_name}} @{{ message.sender }}</a>
-    <a class="timestamp">{{ message.timestamp }}</a>
-  </div>
-  <div class="message-body">
-    {{ message.content }}
-  </div>
-</article>
-{% endfor %}
-
-<article class="reply">
-  <form class="reply-form" method="post">
-    {% csrf_token %}
-    <div class="reply-header">
-      <span class="title">Write a message</span>
-    </div>
-    <div class="reply-body">
-      <div class="reply-fields">
-        {{ form.content }}
-      </div>
-    </div>
-
-    <div class="reply-footer">
-      <input type="reset" value="Clear" title="Clear your message">
-      <input type="submit" value="Send message" title="Send your message">
-    </div>
-  </form>
-</article>
+{% include 'chat/partials/messages.html' %}
+{% include 'chat/partials/writeform.html' %}
 {% endblock %}
