--- a/jbl_chat/chat/templates/chat/sidebar.html
+++ b/jbl_chat/chat/templates/chat/sidebar.html
@@ -4,8 +4,14 @@
       <li class="title">JBL Chat</li>
       <li><a href="#">About</a></li>
       <li><a href="#">API</a></li>
+      {% if user.is_authenticated %}  <!-- We assume the user has a profile -->
+      <li><a href="{% url 'logout' %}">Logout</a> ({{ user.username }})</li>
+      {% else %}
+      <li><a href="{% url 'login' %}">Login</a></li>
+      {% endif %}
     </ul>
   </nav>
+  {% if chat_profiles %}
   <nav>
     <ul>
       <li class="title">Chats</li>
@@ -14,15 +20,5 @@
       {% endfor %}
     </ul>
   </nav>
-  <nav class="user-info">
-    <ul>
-      <li class="title">User</li>
-      {% if user.is_authenticated %}  <!-- We assume the user has a profile -->
-      <li>{{ user.profile.nickname }}</li>
-      <li><a href="{% url 'logout' %}">Logout</a></li>
-      {% else %}
-      <li><a href="{% url 'login' %}">Login</a></li>
-      {% endif %}
-    </ul>
-  </nav>
+  {% endif %}
 </aside>
