Add logged out page

--- a/jbl_chat/chat/templates/registration/login.html
+++ b/jbl_chat/chat/templates/registration/login.html
@@ -30,7 +30,7 @@
     </div>
   </form>
   <div class="login-footer">
-    <span class="footer-text">Don't have an account? <a href="#">Register</a></span>
+    Don't have an account? <a href="#">Register</a>
   </div>
 </div>
 {% endblock %}
