--- a/jbl_chat/chat/templates/chat/sidebar.html
+++ b/jbl_chat/chat/templates/chat/sidebar.html
@@ -1,8 +1,8 @@
 <aside>
   <nav>
     <ul>
-      <li class="title">JBL Chat</li>
-      <li><a href="#">About</a></li>
+      <li class="title"><a href="{% url 'chat:index' %}">JBL Chat</a></li>
+      <li><a href="{% url 'chat:about' %}">About</a></li>
       <li><a href="#">API</a></li>
       {% if user.is_authenticated %}  <!-- We assume the user has a profile -->
       <li><a href="{% url 'logout' %}">Logout</a> ({{ user.username }})</li>
@@ -11,11 +11,11 @@
       {% endif %}
     </ul>
   </nav>
-  {% if chat_profiles %}
+  {% if available_chats %}
   <nav>
     <ul>
       <li class="title">Chats</li>
-      {% for profile in chat_profiles %}
+      {% for profile in available_chats %}
       <li><a href="{% url 'chat:chat' profile.nickname %}">{{ profile.nickname }}</a></li>
       {% endfor %}
     </ul>
