Add API documentation and implement user and chat API views

--- a/jbl_chat/chat/templates/chat/sidebar.html
+++ b/jbl_chat/chat/templates/chat/sidebar.html
@@ -3,7 +3,7 @@
     <ul>
       <li class="title"><a href="{% url 'chat:index' %}">JBL Chat</a></li>
       <li><a href="{% url 'chat:about' %}">About</a></li>
-      <li><a href="#">API</a></li>
+      <li><a href="{% url 'chat:api' %}">API</a></li>
       {% if user.is_authenticated %}  <!-- We assume the user has a profile -->
       <li><a href="{% url 'logout' %}">Logout</a> ({{ user.username }})</li>
       {% else %}
